--- a/EventCalender/src/index.css
+++ b/EventCalender/src/index.css
@@ -66,3 +66,17 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+.search-bar-container{
+  padding-top: 12vh;
+  width: 40%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 200px;
+}
