--- a/EventCalender/src/index.css
+++ b/EventCalender/src/index.css
@@ -1,3 +1,27 @@
+/* index.css */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  --black-gradient: linear-gradient(
+    144.39deg,
+    #f7f8f8 -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
+  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+}
+* {
+  scroll-behavior: smooth;
+}
+.card-item-div {
+  transition: all 0.2s;
+}
+.card-item-div:hover {
+  background-image: url("https://img.freepik.com/free-vector/luminous-stadium-light-effect_23-2148366134.jpg?size=626&ext=jpg&ga=GA1.1.1994926075.1703740652&semt=ais");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: rgb(241, 233, 233);
+}
