--- a/EventCalender/src/Components/SearchBar.css
+++ b/EventCalender/src/Components/SearchBar.css
@@ -1,8 +1,8 @@
 .input-wrapper{
     background-color:#eee;
-    width: 100%;
-    border-radius: 10px;
-    height: 2.5rem;
+    width: 70%;
+    border-radius: 30px;
+    height: 5rem;
     padding: 0 15px;
     box-shadow: 0px 8px 8px #ddd;
     display: flex;
@@ -21,5 +21,6 @@ input:focus{
     outline: none;
 }
 #search-icon{
-    color: royalblue;
+    color: black;
+    
 }
